--- a/Resources/Prototypes/Roles/Jobs/Security/security_officer.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/security_officer.yml
@@ -27,8 +27,7 @@
   equipment:
     eyes: ClothingEyesGlassesSecurity
     ears: ClothingHeadsetSecurity
-    pocket1: WeaponPistolMk58
+    pocket1: WeaponMiniEnergyGun # Убрал "WeaponPistolMk58" и добавил "WeaponMiniEnergyGun"
   storage:
-    back:
+    back: # Убрал "MagazinePistol "
     - Flash
-    - MagazinePistol
